--- a/sass/typography/_h5.scss
+++ b/sass/typography/_h5.scss
@@ -25,11 +25,11 @@
   // Line height
   &-arabic {
     @include font-height($pd-68);
-    word-spacing: $pd-2;
+    @include word-spacing($pd-2);
   }
 
   &-persian {
     @include font-height($pd-48);
-    word-spacing: $pd-1;
+    @include word-spacing($pd-1);
   }
 }
